fix footer alignment for responsive

--- a/css/custom.css
+++ b/css/custom.css
@@ -44,12 +44,13 @@ margin-top: 20%;
    position: fixed;
    left: 0;
    bottom: 0;
-   width: auto;
+   width: 100%;
    color: white;
    align-content: center;
    text-align: center;
    font-family: roboto;
-   font-size: 20px;
+   font-size: auto;
+   
 }
 
 
