--- a/css/solarsystem.css
+++ b/css/solarsystem.css
@@ -4,6 +4,7 @@
     height: 100%;
     position: absolute;
     z-index: -1;
+    overflow: hidden;
   }
   .solar-syst:after {
     content: "";
@@ -246,16 +247,7 @@
     margin-top: -1.5px;
     margin-left: -1.5px;
   }
-  
-  .hide {
-    display: none;
-  }
-  
-  .links {
-    margin-top: 5px !important;
-    font-size: 1em !important;
-  }
-  
+   
   @-webkit-keyframes orb {
     from {
       -webkit-transform: rotate(0deg);
